--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Magic Eight Ball</string>
+    <string name="ask_button">Ask</string>
+    <string name="slogan_title">Make Everyday Decisions Easier!</string>
 </resources>
